--- a/individual.html
+++ b/individual.html
@@ -38,9 +38,9 @@
 <tr><td><font size=3>30)</td><td><font size=3>440 (3305)</td><td><font size=3>Peyton Manning         </td><td><font size=3>2004 ( 8)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>31)</td><td><font size=3>440 (2630)</td><td><font size=3>Donovan McNabb         </td><td><font size=3>2004 (13)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>32)</td><td><font size=3>435 (3570)</td><td><font size=3>Tom Brady              </td><td><font size=3>2007 ( 7)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>33)</td><td><font size=3>430 (2535)</td><td><font size=3>Peyton Manning         </td><td><font size=3>2001 ( 2)</td><td><font size=3>Rich   </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>34)</td><td><font size=3>430 (3090)</td><td><font size=3>Cam Newton             </td><td><font size=3>2011 (16)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>35)</td><td><font size=3>425 ( 925)</td><td><font size=3>Wade Wilson            </td><td><font size=3>1992 (15)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
+<tr><td><font size=3>33)</td><td><font size=3>435 (2685)</td><td><font size=3>Patrick Mahomes        </td><td><font size=3>2019 ( 2)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>34)</td><td><font size=3>430 (2535)</td><td><font size=3>Peyton Manning         </td><td><font size=3>2001 ( 2)</td><td><font size=3>Rich   </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>35)</td><td><font size=3>430 (3090)</td><td><font size=3>Cam Newton             </td><td><font size=3>2011 (16)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
 </table>
 </td></tr><tr><td><br></td></tr><tr><td valign=top>
 <table width=660 border=2 cellspacing=0 cellpadding=1>
@@ -73,14 +73,14 @@
 <tr><td><font size=3>25)</td><td><font size=3>520 (1215)</td><td><font size=3>Tim Biakabutuka        </td><td><font size=3>1999 ( 4)</td><td><font size=3>Brian  </td><td><font size=3>No </td></tr>
 <tr><td><font size=3>26)</td><td><font size=3>510 (2635)</td><td><font size=3>Ricky Williams         </td><td><font size=3>2002 (13)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>27)</td><td><font size=3>510 (3155)</td><td><font size=3>Chris Johnson          </td><td><font size=3>2009 ( 8)</td><td><font size=3>States </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>28)</td><td><font size=3>505 (1155)</td><td><font size=3>Ronnie Brown           </td><td><font size=3>2008 ( 3)</td><td><font size=3>Steven </td><td><font size=3>No </td></tr>
-<tr><td><font size=3>29)</td><td><font size=3>505 (1980)</td><td><font size=3>LeSean McCoy           </td><td><font size=3>2013 (14)</td><td><font size=3>Grant  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>30)</td><td><font size=3>500 ( 575)</td><td><font size=3>LeShon Johnson         </td><td><font size=3>1996 ( 4)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
-<tr><td><font size=3>31)</td><td><font size=3>500 (1825)</td><td><font size=3>Frank Gore             </td><td><font size=3>2009 ( 2)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>32)</td><td><font size=3>495 (2080)</td><td><font size=3>Ray Rice               </td><td><font size=3>2011 (17)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>33)</td><td><font size=3>490 (2405)</td><td><font size=3>LaDainian Tomlinson    </td><td><font size=3>2005 (12)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>34)</td><td><font size=3>485 (3830)</td><td><font size=3>LaDainian Tomlinson    </td><td><font size=3>2006 ( 9)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>35)</td><td><font size=3>485 (2210)</td><td><font size=3>Maurice Jones-Drew     </td><td><font size=3>2009 ( 8)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>28)</td><td><font size=3>510 ( 740)</td><td><font size=3>Chase Edmonds          </td><td><font size=3>2019 ( 7)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
+<tr><td><font size=3>29)</td><td><font size=3>505 (1155)</td><td><font size=3>Ronnie Brown           </td><td><font size=3>2008 ( 3)</td><td><font size=3>Steven </td><td><font size=3>No </td></tr>
+<tr><td><font size=3>30)</td><td><font size=3>505 (1980)</td><td><font size=3>LeSean McCoy           </td><td><font size=3>2013 (14)</td><td><font size=3>Grant  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>31)</td><td><font size=3>500 ( 575)</td><td><font size=3>LeShon Johnson         </td><td><font size=3>1996 ( 4)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
+<tr><td><font size=3>32)</td><td><font size=3>500 (1825)</td><td><font size=3>Frank Gore             </td><td><font size=3>2009 ( 2)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>33)</td><td><font size=3>495 (2080)</td><td><font size=3>Ray Rice               </td><td><font size=3>2011 (17)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>34)</td><td><font size=3>490 (2405)</td><td><font size=3>LaDainian Tomlinson    </td><td><font size=3>2005 (12)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>35)</td><td><font size=3>485 (3830)</td><td><font size=3>LaDainian Tomlinson    </td><td><font size=3>2006 ( 9)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
 </table>
 </td></tr><tr><td><br><br><br></td></tr><tr><td valign=top>
 <table width=660 border=2 cellspacing=0 cellpadding=1>
@@ -119,8 +119,8 @@
 <tr><td><font size=3>31)</td><td><font size=3>405 (2095)</td><td><font size=3>Randy Moss             </td><td><font size=3>2000 ( 5)</td><td><font size=3>Steve  </td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>32)</td><td><font size=3>405 (1610)</td><td><font size=3>Santana Moss           </td><td><font size=3>2005 (16)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>33)</td><td><font size=3>405 (1130)</td><td><font size=3>Amari Cooper           </td><td><font size=3>2018 (14)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>34)</td><td><font size=3>400 (1025)</td><td><font size=3>Jerry Rice             </td><td><font size=3>1992 ( 7)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>35)</td><td><font size=3>400 (1355)</td><td><font size=3>Jerry Rice             </td><td><font size=3>1994 ( 1)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>34)</td><td><font size=3>405 ( 560)</td><td><font size=3>Will Fuller            </td><td><font size=3>2019 ( 5)</td><td><font size=3>Randy  </td><td><font size=3>No </td></tr>
+<tr><td><font size=3>35)</td><td><font size=3>405 (1110)</td><td><font size=3>Stefon Diggs           </td><td><font size=3>2019 ( 6)</td><td><font size=3>States </td><td><font size=3>No </td></tr>
 </table>
 </td></tr><tr><td><br><br><br></td></tr><tr><td valign=top>
 <table width=660 border=2 cellspacing=0 cellpadding=1>
@@ -227,20 +227,20 @@
 <tr><td><font size=3>19)</td><td><font size=3>425 (2075)</td><td><font size=3>Mike Anderson          </td><td><font size=3>2000 (14)</td><td><font size=3>Steve  </td><td><font size=3>No </td></tr>
 <tr><td><font size=3>20)</td><td><font size=3>425 (1730)</td><td><font size=3>Josh Allen             </td><td><font size=3>2018 (17)</td><td><font size=3>Matthew</td><td><font size=3>Yes</td></tr>
 <tr><td><font size=3>21)</td><td><font size=3>415 (2600)</td><td><font size=3>Robert Griffin         </td><td><font size=3>2012 ( 6)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>22)</td><td><font size=3>405 (1640)</td><td><font size=3>Deshaun Watson         </td><td><font size=3>2017 ( 8)</td><td><font size=3>Matthew</td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>23)</td><td><font size=3>400 (1100)</td><td><font size=3>Joey Galloway          </td><td><font size=3>1995 (11)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>24)</td><td><font size=3>400 (1175)</td><td><font size=3>Eddie Kennison         </td><td><font size=3>1996 (16)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>25)</td><td><font size=3>400 (1300)</td><td><font size=3>Corey Dillon           </td><td><font size=3>1997 (15)</td><td><font size=3>Brian  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>26)</td><td><font size=3>400 ( 900)</td><td><font size=3>Fred Lane              </td><td><font size=3>1997 (10)</td><td><font size=3>Grant  </td><td><font size=3>No </td></tr>
-<tr><td><font size=3>27)</td><td><font size=3>400 ( 800)</td><td><font size=3>Antowain Smith         </td><td><font size=3>1997 ( 4)</td><td><font size=3>Mike   </td><td><font size=3>No </td></tr>
-<tr><td><font size=3>28)</td><td><font size=3>400 (1800)</td><td><font size=3>Fred Taylor            </td><td><font size=3>1998 (11)</td><td><font size=3>Matthew</td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>29)</td><td><font size=3>400 (1200)</td><td><font size=3>Devin Hester           </td><td><font size=3>2006 (14)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
-<tr><td><font size=3>30)</td><td><font size=3>400 ( 990)</td><td><font size=3>Torrey Smith           </td><td><font size=3>2011 ( 3)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
-<tr><td><font size=3>31)</td><td><font size=3>400 (1795)</td><td><font size=3>Alfred Morris          </td><td><font size=3>2012 (17)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>32)</td><td><font size=3>395 (2075)</td><td><font size=3>Mike Anderson          </td><td><font size=3>2000 (13)</td><td><font size=3>Steve  </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>33)</td><td><font size=3>395 ( 985)</td><td><font size=3>Julius Jones           </td><td><font size=3>2004 (13)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>34)</td><td><font size=3>390 (1720)</td><td><font size=3>Steve Slaton           </td><td><font size=3>2008 (13)</td><td><font size=3>John   </td><td><font size=3>Yes</td></tr>
-<tr><td><font size=3>35)</td><td><font size=3>390 (1500)</td><td><font size=3>David Johnson          </td><td><font size=3>2015 (15)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>22)</td><td><font size=3>410 (2050)</td><td><font size=3>Daniel Jones           </td><td><font size=3>2019 ( 3)</td><td><font size=3>Sam    </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>23)</td><td><font size=3>405 (1640)</td><td><font size=3>Deshaun Watson         </td><td><font size=3>2017 ( 8)</td><td><font size=3>Matthew</td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>24)</td><td><font size=3>400 (1100)</td><td><font size=3>Joey Galloway          </td><td><font size=3>1995 (11)</td><td><font size=3>Randy  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>25)</td><td><font size=3>400 (1175)</td><td><font size=3>Eddie Kennison         </td><td><font size=3>1996 (16)</td><td><font size=3>Roger  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>26)</td><td><font size=3>400 (1300)</td><td><font size=3>Corey Dillon           </td><td><font size=3>1997 (15)</td><td><font size=3>Brian  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>27)</td><td><font size=3>400 ( 900)</td><td><font size=3>Fred Lane              </td><td><font size=3>1997 (10)</td><td><font size=3>Grant  </td><td><font size=3>No </td></tr>
+<tr><td><font size=3>28)</td><td><font size=3>400 ( 800)</td><td><font size=3>Antowain Smith         </td><td><font size=3>1997 ( 4)</td><td><font size=3>Mike   </td><td><font size=3>No </td></tr>
+<tr><td><font size=3>29)</td><td><font size=3>400 (1800)</td><td><font size=3>Fred Taylor            </td><td><font size=3>1998 (11)</td><td><font size=3>Matthew</td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>30)</td><td><font size=3>400 (1200)</td><td><font size=3>Devin Hester           </td><td><font size=3>2006 (14)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
+<tr><td><font size=3>31)</td><td><font size=3>400 ( 990)</td><td><font size=3>Torrey Smith           </td><td><font size=3>2011 ( 3)</td><td><font size=3>-      </td><td><font size=3>-  </td></tr>
+<tr><td><font size=3>32)</td><td><font size=3>400 (1795)</td><td><font size=3>Alfred Morris          </td><td><font size=3>2012 (17)</td><td><font size=3>Steven </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>33)</td><td><font size=3>395 (2075)</td><td><font size=3>Mike Anderson          </td><td><font size=3>2000 (13)</td><td><font size=3>Steve  </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>34)</td><td><font size=3>395 ( 985)</td><td><font size=3>Julius Jones           </td><td><font size=3>2004 (13)</td><td><font size=3>Mike   </td><td><font size=3>Yes</td></tr>
+<tr><td><font size=3>35)</td><td><font size=3>390 (1720)</td><td><font size=3>Steve Slaton           </td><td><font size=3>2008 (13)</td><td><font size=3>John   </td><td><font size=3>Yes</td></tr>
 </table>
 </td></tr></table>
 
