--- a/week17.html
+++ b/week17.html
@@ -50,7 +50,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>185</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>360</td></tr>
 <tr><td>Perriman</td>      <td></td><td align=right>165</td></tr>
@@ -58,7 +58,7 @@
 <tr><td>Fells (D)</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>165</td></tr>
 <tr><td>Blough</td>        <td></td><td align=right>75</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>950</td></tr>
 </table>
 </td>
 </tr>
@@ -112,12 +112,12 @@
 <tr><td>Winston</td>       <td></td><td align=right>135</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>DFreeman</td>      <td></td><td align=right>25</td></tr>
-<tr><td>DThomas (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>DThomas (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>145</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>165</td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>125</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>670</td></tr>
 </table>
 </td>
 </tr>
@@ -169,11 +169,11 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11965</font></td>
+    <td><font size=2>12150</font></td>
     <td><font size=2>9455</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
-    <td><font size=2>3</font></td></tr>
+    <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
