--- a/treasury.html
+++ b/treasury.html
@@ -1,22 +1,22 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=650>
-<b><font size=6 color='white'><center>2018 Prizes</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2019 Prizes</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table border=2>
 <tr><td><b>Prize</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Rich</b></td>
     <td width=42><b>Roger</b></td>
     <td width=42><b>Matthew</b></td>
-    <td width=42><b>Steven</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Mike</b></td>
+    <td width=42><b>States</b></td>
     <td width=42><b>Randy</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Steven</b></td>
     <td width=42><b>John</b></td>
-    <td width=42><b>Sam</b></td></tr>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>Rich</b></td>
+    <td width=42><b>Mike</b></td></tr>
 <tr><td>Fantasy Bowl winner</td>
-    <td align="right">$150</td>
     <td align="right">0</td>
+    <td align="right">$150</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -29,13 +29,13 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">$100</td></tr>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
 <tr><td>Make playoffs</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -44,14 +44,14 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">$50</td>
     <td align="right">0</td>
+    <td align="right">$50</td>
     <td align="right">0</td></tr>
 <tr><td>Most points for year</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">$100</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -70,25 +70,25 @@
     <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>Highest score for week</td>
-    <td align="right">$45</td>
     <td align="right">0</td>
     <td align="right">$15</td>
+    <td align="right">$60</td>
     <td align="right">$75</td>
     <td align="right">$15</td>
-    <td align="right">$30</td>
+    <td align="right">$15</td>
     <td align="right">$15</td>
     <td align="right">$30</td>
-    <td align="right">0</td>
-    <td align="right">$30</td></tr>
+    <td align="right">$15</td>
+    <td align="right">$15</td></tr>
 <tr><td>Total</td>
-    <td align="right">$295</td>
     <td align="right">0</td>
-    <td align="right">$110</td>
-    <td align="right">$75</td>
+    <td align="right">$165</td>
+    <td align="right">$155</td>
+    <td align="right">$275</td>
+    <td align="right">$15</td>
+    <td align="right">$15</td>
     <td align="right">$15</td>
     <td align="right">$30</td>
-    <td align="right">$15</td>
-    <td align="right">$80</td>
-    <td align="right">0</td>
-    <td align="right">$130</td></tr>
+    <td align="right">$65</td>
+    <td align="right">$15</td></tr>
 </table>
