--- a/treasury.html
+++ b/treasury.html
@@ -29,13 +29,13 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">$100</td></tr>
+    <td align="right">$100</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td>
+    <td align="right">0</td></tr>
 <tr><td>Make playoffs</td>
     <td align="right">0</td>
     <td align="right">0</td>
