--- a/pickups.html
+++ b/pickups.html
@@ -1,125 +1,253 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Emmanuel Sanders/Dion Lewis</td>
-<td width=50>9/17</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Malcolm Brown/Hunter Henry</td>
-<td width=50>9/12</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Mike Nugent/Noah Fant</td>
-<td width=50>10/3</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Mason Rudolph/Royce Freeman</td>
-<td width=50>11/5</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Duke Williams/Hunter Renfrow</td>
-<td width=50>10/11</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Noah Fant/Mason Rudolph</td>
-<td width=50>11/14</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Chase Edmonds/Raheem Mostert</td>
-<td width=50>10/21</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Drew Lock/Marquez Valdes-Scantling</td>
-<td width=50>11/19</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Benny Snell\Duke Williams</td>
-<td width=50>11/28</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Tyler Higbee/Jimmy Graham</td>
-<td width=50>12/29</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Darren Fells/Brandon McManus</td>
-<td width=50>10/31</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Matthew Stafford/Corey Davis</td>
-<td width=50>9/17</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Tyrell Williams/Matt LaCosse</td>
-<td width=50>10/31</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Preston Williams/Tarik Cohen</td>
-<td width=50>9/25</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Ross Dwelley/Qadree Ollison</td>
-<td width=50>11/11</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Marvin Jones/Mitch Trubisky</td>
-<td width=50>10/29</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Derrius Guice/Ross Dwelley</td>
-<td width=50>11/19</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Ryan Fitzpatrick/Matthew Stafford</td>
-<td width=50>12/21</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>David Blough/Dante Pettis</td>
-<td width=50>12/28</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -129,158 +257,30 @@
 </tr>
 <tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Gardner Minshew/Eric Ebron</td>
-<td width=50>9/10</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Zane Gonzalez/DeSean Jackson</td>
-<td width=50>9/26</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Andy Dalton/Parris Campbell</td>
-<td width=50>9/21</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Ronald Jones/Kalen Ballage</td>
-<td width=50>10/1</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>DJ Chark/Adrian Peterson</td>
-<td width=50>10/1</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Eric Ebron/Justin Jackson</td>
-<td width=50>10/22</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Derek Carr/Deebo Samuel</td>
-<td width=50>10/29</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Deebo Samuel/Demarcus Robinson</td>
-<td width=50>11/13</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
 <td width=370></td>
 <td width=50></td>
 </tr></table></td>
 <td><table><tr>
-<td width=15>5)</td>
+<td width=15>1)</td>
 <td width=370></td>
 <td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>John</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Sam</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Wayne Gallman/Duke Johnson</td>
-<td width=50>9/24</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Diontae Johnson/Sam Darnold</td>
-<td width=50>9/19</td>
-</tr></table></td>
-</tr>
-<tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Vernon Davis/Jesse James</td>
-<td width=50>9/24</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Jacoby Brissett/Darwin Thompson</td>
-<td width=50>10/1</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Devlin Hodges/Vernon Davis</td>
-<td width=50>10/8</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Hunter Henry/Vance McDonald</td>
-<td width=50>10/15</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Darius Slayton/Dede Westbrook</td>
-<td width=50>10/16</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Ryan Griffin/Diontae Johnson</td>
-<td width=50>11/23</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>Jonathan Williams/Aldrick Rosas</td>
-<td width=50>11/19</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370>De'Anthony Thomas/Austin Seibert</td>
-<td width=50>1/4</td>
-</tr></table></td>
-</tr>
-<tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Ryan Tannehill/Andy Isabella</td>
-<td width=50>10/27</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Dawson Knox/Jordan Reed</td>
-<td width=50>10/1</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Traded to Grant</td>
-<td width=50>11/16</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Phillip Dorsett/Tommy Sweeney</td>
-<td width=50>10/19</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -324,41 +324,8 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<tr><td width=50>9/1</td>
+<tr><td width=50>9/3</td>
 <td width=600>
-Free Pickups:<br>
-Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)<br>
-Team 6  - DeSean Jackson/N'Keal Harry (9/10)<br>
-Team 10 - Tommy Sweeney/Jerick McKinnon (9/14)<br>
-Team 5  - Carlos Hyde/CJ Anderson (9/17)<br>
-Team 6  - Demarcus Robinson/Matthew Wright (9/17)<br>
-Team 1  - Raheem Mostert/Derrius Guice (9/17)<br>
-Team 5  - Darren Waller/Ben Roethlisberger (9/17)<br>
-Team 5  - Darrel Williams/Antonio Brown (9/24)<br>
-Team 5  - Will Dissly/David Njoku (9/25)<br>
-Team 8  - Josh Lambo/Stephen Gostkowski (10/8)<br>
-Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
-Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
-Team 5  - DeVante Parker/Will Dissly (10/24)<br>
-Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
-Team 4  - Reggie Bonnafon/Cam Newton (11/5)<br>
-Team 10 - N'Keal Harry/Damion Willis (11/10)<br>
-Team 8  - Brian Hill/Ito Smith (11/12)<br>
-Team 4  - Nick Foles/Preston Williams (11/15)<br>
-Team 10 - Brett Maher/Drew Lock (11/17)<br>
-Team 6  - Dallas Goedert/Delanie Walker (11/27)<br>
-Team 6  - Patrick Laird/Eric Ebron (12/4)<br>
-Team 3  - Raheem Mostert/Derrius Guice (12/10)<br>
-Team 7  - Zach Pascal/Alshon Jeffery (12/12)<br>
-Team 10 - Brandon McManus/Brett Maher (12/15)<br>
-Team 4  - Mike/Boone/Marvin Jones (12/17)<br>
-Team 3  - Breshad Perriman/Calvin Ridley (12/18)<br>
-Team 5  - Jamison Crowder/Darrel Williams (12/29)<br>
-Team 8  - Antonio Brown/Rashaad Penny (12/29)
-</td></tr>
-<tr><td width=50>11/16</td>
-<td width=600>
-Team 5  - Matt Ryan, Terry McLaurin, pickup ()<br>
-Team 9  - Tevin Coleman, DeVante Parker
+Free Pickups:
 </td></tr>
 </table>
