--- a/week1.html
+++ b/week1.html
@@ -6,59 +6,59 @@
 <tr>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>335</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>80</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Beckham</td>       <td></td><td align=right>35</td></tr>
-<tr><td>JGordon</td>       <td></td><td align=right>135</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>35</td></tr>
-<tr><td>Hauschka</td>      <td></td><td align=right>55</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>165</td></tr>
-<tr><td></td>              <td></td><td align=right>840</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>150</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>25</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>100</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>25</td></tr>
-<tr><td>Rosas</td>         <td></td><td align=right>30</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>140</td></tr>
-<tr><td></td>              <td></td><td align=right>470</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Wentz</td>         <td></td><td align=right>275</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>60</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>45</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>60</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>75</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>30</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>135</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>120</td></tr>
-<tr><td></td>              <td></td><td align=right>800</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Winston</td>       <td></td><td align=right>50</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>110</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>150</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>125</td></tr>
-<tr><td>McDonald</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gostkowski</td>    <td></td><td align=right>140</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>5</td></tr>
-<tr><td></td>              <td></td><td align=right>580</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
+<tr><td>Brees</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jarwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 </tr>
@@ -66,88 +66,88 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>380</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>345</td></tr>
-<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pettis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>130</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>25</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>70</td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>155</td></tr>
-<tr><td></td>              <td></td><td align=right>1105</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>325</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>35</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>15</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>35</td></tr>
-<tr><td></td>              <td></td><td align=right>410</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Samuel</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Newton</td>        <td></td><td align=right>30</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>250</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>255</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>160</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>35</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>40</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>150</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>40</td></tr>
-<tr><td></td>              <td></td><td align=right>960</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>340</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>165</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>250</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>50</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>150</td></tr>
-<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>35</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>990</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Sloman</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 </tr>
 <tr>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>25</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>125</td></tr>
-<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edelman</td>       <td></td><td align=right>40</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>35</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>50</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>20</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>295</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>75</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>30</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>125</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>180</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>105</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>515</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -174,7 +174,7 @@
     <td><font size=2>1105</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
+<tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>840</font></td>
@@ -182,7 +182,7 @@
     <td><font size=2>840</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
+<tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>470</font></td>
@@ -190,7 +190,7 @@
     <td><font size=2>470</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
+<tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>410</font></td>
@@ -198,7 +198,7 @@
     <td><font size=2>410</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Grant(5)</font></td>
+<tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>295</font></td>
@@ -214,7 +214,7 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
+<tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>990</font></td>
@@ -222,7 +222,7 @@
     <td><font size=2>990</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Matthew(2)</font></td>
+<tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>800</font></td>
@@ -230,7 +230,7 @@
     <td><font size=2>800</font></td>
     <td><font size=2>800</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
+<tr><td><font size=2>John(6)</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>515</font></td>
@@ -238,7 +238,7 @@
     <td><font size=2>515</font></td>
     <td><font size=2>515</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Randy(4)</font></td>
+<tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>960</font></td>
@@ -246,7 +246,7 @@
     <td><font size=2>960</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Sam(8)</font></td>
+<tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
     <td><font size=2>580</font></td>
