--- a/roster.html
+++ b/roster.html
@@ -115,7 +115,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
-<tr><td> NE</td><td>Dalton Keene           </td></tr>
+<tr><td>JAX</td><td>James Robinson         </td></tr>
 </table>
 </td>
 <td valign=top>
