--- a/pickups.html
+++ b/pickups.html
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>James Robinson/Dalton Keene</td>
+<td width=50>9/10</td>
 </tr></table></td>
 </tr>
 <tr>
