--- a/week1.html
+++ b/week1.html
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>White</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
