--- a/pickups.html
+++ b/pickups.html
@@ -326,6 +326,7 @@
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
 <tr><td width=50>9/3</td>
 <td width=600>
-Free Pickups:
+Free Pickups:<br>
+Team 1  - Ryan Succop/Matt Gay (9/12)
 </td></tr>
 </table>
