--- a/pickups.html
+++ b/pickups.html
@@ -327,6 +327,7 @@
 <tr><td width=50>9/3</td>
 <td width=600>
 Free Pickups:<br>
-Team 1  - Ryan Succop/Matt Gay (9/12)
+Team 1  - Ryan Succop/Matt Gay (9/12)<br>
+Team 9  - Marvin Jones/Deebo Samuel (9/13)
 </td></tr>
 </table>
