--- a/roster.html
+++ b/roster.html
@@ -244,10 +244,10 @@
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
+<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
 <tr><td>NYJ</td><td>Chris Herndon          </td></tr>
