--- a/week1.html
+++ b/week1.html
@@ -84,7 +84,7 @@
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
