--- a/roster.html
+++ b/roster.html
@@ -209,7 +209,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td> NO</td><td>Drew Brees             </td></tr>
 <tr><td> GB</td><td>Aaron Rodgers          </td></tr>
-<tr><td>CLE</td><td>Baker Mayfield         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>ARI</td><td>Kenyan Drake           </td></tr>
@@ -224,6 +223,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Hooper          </td></tr>
 <tr><td>DAL</td><td>Blake Jarwin           </td></tr>
+<tr><td>TEN</td><td>Jonnu Smith            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
