--- a/pickups.html
+++ b/pickups.html
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jonnu Smith/Baker Mayfield</td>
+<td width=50>9/14</td>
 </tr></table></td>
 </tr>
 <tr>
