--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,45 +59,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>815</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>815</font></td>
+    <td><font size=2>815</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>12150</font></td>
-    <td><font size=2>9455</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>300</font></td>
-    <td><font size=2>4</font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>10280</font></td>
-    <td><font size=2>10470</font></td>
-    <td><font size=2>900</font></td>
-    <td><font size=2>300</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>9530</font></td>
-    <td><font size=2>10210</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>175</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>10105</font></td>
-    <td><font size=2>9700</font></td>
-    <td><font size=2>1705</font></td>
-    <td><font size=2>210</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>9185</font></td>
-    <td><font size=2>9635</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>270</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>415</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>710</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>710</font></td>
+    <td><font size=2>710</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>815</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>415</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>415</font></td>
+    <td><font size=2>415</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,46 +107,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11190</font></td>
-    <td><font size=2>8595</font></td>
-    <td><font size=2>875</font></td>
-    <td><font size=2>295</font></td>
+<tr><td><font size=2>Matthew(10)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>940</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>13285</font></td>
-    <td><font size=2>9190</font></td>
-    <td><font size=2>1195</font></td>
-    <td><font size=2>365</font></td>
-    <td><font size=2>5</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8800</font></td>
-    <td><font size=2>8380</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>300</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>11475</font></td>
-    <td><font size=2>9070</font></td>
-    <td><font size=2>1305</font></td>
-    <td><font size=2>390</font></td>
-    <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>10375</font></td>
-    <td><font size=2>9200</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>245</font></td>
-    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Steven(2)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>830</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>830</font></td>
+    <td><font size=2>830</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Mike(4)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>John(6)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>710</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>830</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>420</font></td>
+    <td><font size=2>0</font></td></tr>
 </table>
 </table>
 </body>
